# braid

./: .claude.local.md  .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOFF.braid.workspace.yaml  HANDOFF.md  README.md  deny.toml  justfile
.ctx/: HANDOFF.braid.braid.yaml
.gitea/workflows/: ci.yml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  nightly.yml  release.yml
.taskit-cache/: compile-cache.json  master-hash
crates/braid-bootstrap/: Cargo.toml
crates/braid-bootstrap/src/: config.rs  doctor.rs  lib.rs  render.rs  setup.rs
crates/braid-bootstrap/src/checks/: config_dir.rs  connectivity.rs  keys.rs  mod.rs  toolchain.rs  tools.rs  workspace.rs
crates/braid-cli/: Cargo.toml
crates/braid-cli/src/: main.rs
crates/braid-cli/tests/: phase2_integration.rs
crates/braid-components/: Cargo.toml
crates/braid-components/components/hello-world/: component.toml
crates/braid-components/components/hello-world/commands/: greet.md
crates/braid-components/components/hello-world/prompts/: system.txt
crates/braid-components/src/: lib.rs  manifest.rs  registry.rs
crates/braid-context/: Cargo.toml
crates/braid-context/src/: assembler.rs  lib.rs  provider.rs  tool.rs  types.rs
crates/braid-context/src/sources/: doob.rs  mod.rs  repo.rs
crates/braid-context/tests/: integration.rs
crates/braid-core/: Cargo.toml
crates/braid-core/src/: engine.rs  lib.rs  planner.rs  registry.rs  tools.rs
crates/braid-engine/: Cargo.toml
crates/braid-engine/src/: engine.rs  lib.rs  planner.rs
crates/braid-hooks/: Cargo.toml
crates/braid-hooks/src/: contract.rs  executor.rs  lib.rs  registry.rs
crates/braid-hooks/src/guards/: destructive.rs  freshness.rs  mod.rs
crates/braid-mcp/: Cargo.toml
crates/braid-mcp/src/: lib.rs  server.rs
crates/braid-mcp/src/tools/: echo.rs  mod.rs
crates/braid-model/: Cargo.toml
crates/braid-model/src/: context.rs  event.rs  lib.rs  message.rs  provider.rs  session.rs  task.rs  tool.rs  transcript.rs
crates/braid-model/tests/: serde_roundtrip.rs
crates/braid-observe/: Cargo.toml
crates/braid-observe/fixtures/: braid-native.jsonl  claude-code.jsonl  devloop.jsonl
crates/braid-observe/src/: e2e_streaming_tests.rs  ingest.rs  lib.rs  memory.rs  render.rs  replay.rs  store.rs
crates/braid-observe/tests/: conformance.rs  redaction_audit.rs  session_format_stability.rs
crates/braid-ports/: Cargo.toml
crates/braid-ports/src/: lib.rs
crates/braid-providers/: Cargo.toml
crates/braid-providers/src/: lib.rs  mock.rs  openai.rs
crates/braid-providers/tests/: provider_contract.rs
crates/braid-redact/: Cargo.toml
crates/braid-redact/src/: lib.rs  path.rs  patterns.rs  pipeline.rs  rule.rs
crates/braid-tui/: Cargo.toml
crates/braid-tui/src/: app.rs  catalog.rs  chat.rs  completion.rs  keys.rs  main.rs  model.rs  ui.rs
docs/: cli-contract.md
docs/adrs/: ADR-001-event-envelope-format.md  ADR-002-tool-contract.md  ADR-003-component-format.md
docs/architecture/: README.md  adr-001-event-envelope.md  adr-002-tool-contract.md  adr-003-component-format.md  cmd-run-flow.md  crate-map.md  data-model.md  engine-loop.md  extension-points.md  session-persistence.md  workspace-overview.md
docs/planning/: Braid - Crate Implementation Checklist.md  Braid - Rust Workspace Blueprint.md  Braid - Rust Workspace Spec.md  Braid.md  README.md
docs/superpowers/plans/: 2026-03-14-model-transcript-openai.md  2026-03-15-cli-parsing-tool-registry.md  2026-03-15-gitea-ci.md  2026-03-15-planner-executor.md  2026-03-15-provider-contract-tests.md  2026-03-24-braid-observe.md  2026-03-25-hexagonal-refactor.md  2026-03-30-braid-observe-phase3a.md  2026-03-30-braid-tui-phase3b.md  2026-04-01-braid-bootstrap.md  2026-04-01-braid-context.md
docs/superpowers/specs/: 2026-03-14-model-transcript-openai-design.md  2026-03-15-cli-parsing-tool-registry-design.md  2026-03-15-gitea-ci-design.md  2026-03-15-planner-executor-design.md  2026-03-15-provider-contract-tests-design.md  2026-03-24-braid-observe-design.md  2026-03-25-hexagonal-refactor-design.md  2026-03-30-braid-observe-deepen.md  2026-04-01-braid-bootstrap-design.md  2026-04-01-braid-context-design.md  2026-07-13-harness-architecture.md
scripts/: README.md  install-hooks.sh  install-tsi.sh  preflight.nu  publish.nu  tsi
xtask/: Cargo.toml
xtask/src/: main.rs
