[workspace]
members = [
  "crates/braid-model",
  "crates/braid-ports",
  "crates/braid-core",
  "crates/braid-providers",
  "crates/braid-cli",
  "crates/braid-redact",
  "crates/braid-hooks",
  "crates/braid-mcp",
  "crates/braid-observe",
  "crates/braid-tui",
  "crates/braid-context",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Joe"]
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
regex = "1"
tokio = { version = "1", features = ["rt", "macros", "io-std", "io-util"] }
chrono = { version = "0.4", features = ["serde"] }
