[workspace]
members = [
  "xtask",
  "crates/braid-model",
  "crates/braid-ports",
  "crates/braid-core",
  "crates/braid-providers",
  "crates/braid-cli",
  "crates/braid-redact",
  "crates/braid-hooks",
  "crates/braid-mcp",
  "crates/braid-observe",
  "crates/braid-tui",
  "crates/braid-context",
  "crates/braid-bootstrap",
  "crates/braid-components",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Joe"]
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
tokio = { version = "1", features = ["rt", "macros", "io-std", "io-util"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"

[workspace.lints.rust]
unsafe_code = "deny"
dead_code = "warn"

[workspace.lints.clippy]
# Groups (priority -1 so individual overrides take effect)
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Deny: always bugs or dangerous patterns in production code
unwrap_used = "deny"
todo = "deny"
wildcard_imports = "deny"

# Allow: too noisy / not worth the churn
cargo_common_metadata = "allow"       # private workspace, no publishing
derive_partial_eq_without_eq = "allow" # serde_json::Value doesn't impl Eq
missing_errors_doc = "allow"          # doc coverage not required
missing_panics_doc = "allow"          # doc coverage not required
module_name_repetitions = "allow"     # common Rust pattern (e.g. FooError in mod foo)
must_use_candidate = "allow"          # too aggressive
option_if_let_else = "allow"          # often less readable
redundant_closure_for_method_calls = "warn"   # surface on new code
too_many_lines = "allow"              # subjective
multiple_crate_versions = "allow"     # transitive deps, can't always control
struct_excessive_bools = "allow"      # design choice
cognitive_complexity = "allow"        # subjective metric
many_single_char_names = "allow"      # common in math/format functions
redundant_feature_names = "allow"     # test-support is a stable API surface
