[workspace]
members = [
  "xtask",
  "crates/braid-model",
  "crates/braid-ports",
  "crates/braid-engine",
  "crates/braid-providers",
  "crates/braid-cli",
  "crates/braid-redact",
  "crates/braid-hooks",
  "crates/braid-mcp",
  "crates/braid-observe",
  "crates/braid-tui",
  "crates/braid-context",
  "crates/braid-bootstrap",
  "crates/braid-components",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.3.0"
authors = ["Joseph O'Brien <joeobrien516@gmail.com>"]
rust-version = "1.88.0"
repository = "https://github.com/89jobrien/braid"
homepage = "https://github.com/89jobrien/braid"
documentation = "https://docs.rs/braid-engine"

[workspace.dependencies]
anyhow = "1"
braid-bootstrap = { path = "crates/braid-bootstrap", version = "^0.3.0" }
braid-components = { path = "crates/braid-components", version = "^0.3.0" }
braid-context = { path = "crates/braid-context", version = "^0.3.0" }
braid-engine = { path = "crates/braid-engine", version = "^0.3.0" }
braid-hooks = { path = "crates/braid-hooks", version = "^0.3.0" }
braid-mcp = { path = "crates/braid-mcp", version = "^0.3.0" }
braid-model = { path = "crates/braid-model", version = "^0.3.0" }
braid-observe = { path = "crates/braid-observe", version = "^0.3.0" }
braid-ports = { path = "crates/braid-ports", version = "^0.3.0" }
braid-providers = { path = "crates/braid-providers", version = "^0.3.0" }
braid-redact = { path = "crates/braid-redact", version = "^0.3.0" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
regex = "1"
reqwest = { version = "^0.12.28", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "^3.27.0"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "io-std", "io-util"] }
toml = "0.8"
tracing = "0.1"

[workspace.lints.rust]
unsafe_code = "deny"
dead_code = "warn"

[workspace.lints.clippy]
# Groups (priority -1 so individual overrides take effect)
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Deny: always bugs or dangerous patterns in production code
unwrap_used = "deny"
todo = "deny"
wildcard_imports = "deny"

# Allow: too noisy / not worth the churn
cargo_common_metadata = "allow"       # descriptions set per-crate; keywords/categories optional
derive_partial_eq_without_eq = "allow" # serde_json::Value doesn't impl Eq
missing_errors_doc = "allow"          # doc coverage not required
missing_panics_doc = "allow"          # doc coverage not required
module_name_repetitions = "allow"     # common Rust pattern (e.g. FooError in mod foo)
must_use_candidate = "allow"          # too aggressive
option_if_let_else = "allow"          # often less readable
redundant_closure_for_method_calls = "warn"   # surface on new code
too_many_lines = "allow"              # subjective
multiple_crate_versions = "allow"     # transitive deps, can't always control
struct_excessive_bools = "allow"      # design choice
cognitive_complexity = "allow"        # subjective metric
many_single_char_names = "allow"      # common in math/format functions
redundant_feature_names = "allow"     # test-support is a stable API surface
