[package]
name = "braid-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
tempfile = "3"
