[package]
name = "braid-bootstrap"
description = "Environment setup and health checks for the braid agent platform"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
reqwest = { workspace = true }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
