[package]
name = "braid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
braid-core = { path = "../braid-core" }
braid-hooks = { path = "../braid-hooks" }
braid-model = { path = "../braid-model" }
braid-ports = { path = "../braid-ports" }
braid-providers = { path = "../braid-providers" }
braid-mcp = { path = "../braid-mcp" }
braid-observe = { path = "../braid-observe" }
braid-redact = { path = "../braid-redact" }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
braid-hooks = { path = "../braid-hooks" }
