[package]
name = "braid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
braid-core = { path = "../braid-core", version = "0.3.0" }
braid-hooks = { path = "../braid-hooks", version = "0.3.0" }
braid-model = { path = "../braid-model", version = "0.3.0" }
braid-ports = { path = "../braid-ports", version = "0.3.0" }
braid-providers = { path = "../braid-providers", version = "0.3.0" }
braid-mcp = { path = "../braid-mcp", version = "0.3.0" }
braid-bootstrap = { path = "../braid-bootstrap", version = "0.3.0" }
braid-context = { path = "../braid-context", version = "0.3.0" }
braid-observe = { path = "../braid-observe", version = "0.3.0" }
braid-redact = { path = "../braid-redact", version = "0.3.0" }
braid-components = { path = "../braid-components", version = "0.3.0" }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
braid-hooks = { path = "../braid-hooks", version = "0.3.0" }

[lints]
workspace = true
