[package]
name = "braid-cli"
publish = false
description = "Command-line interface for the braid agent platform"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
braid-bootstrap = { workspace = true }
braid-components = { workspace = true }
braid-context = { workspace = true }
braid-engine = { workspace = true }
braid-hooks = { workspace = true }
braid-mcp = { workspace = true }
braid-model = { workspace = true }
braid-observe = { workspace = true }
braid-ports = { workspace = true }
braid-providers = { workspace = true }
braid-redact = { workspace = true }
clap.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
braid-hooks = { workspace = true }

[lints]
workspace = true
