[package]
name = "braid-components"
description = "Filesystem-backed component registry for braid"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
braid-ports = { path = "../braid-ports", version = "0.3.0" }
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
