[package]
name = "braid-components"
description = "Filesystem-backed component registry for braid"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
braid-ports = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
