[package]
name = "braid-context"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
chrono.workspace = true
braid-model = { path = "../braid-model" }
braid-ports = { path = "../braid-ports" }

[lints]
workspace = true
