[package]
name = "braid-context"
description = "Context assembly and compaction for braid agent sessions"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
braid-model = { path = "../braid-model", version = "0.3.0" }
braid-ports = { path = "../braid-ports", version = "0.3.0" }

[lints]
workspace = true
