[package]
name = "braid-context"
description = "Context assembly and compaction for braid agent sessions"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
braid-model = { workspace = true }
braid-ports = { workspace = true }
chrono.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
