[package]
name = "braid-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
braid-model = { path = "../braid-model" }
braid-ports = { path = "../braid-ports" }
chrono.workspace = true

[dev-dependencies]
serde_json.workspace = true
