[package]
name = "braid-engine"
description = "Agent loop engine for the braid platform"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
braid-model = { workspace = true }
braid-ports = { workspace = true }
chrono.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
