[package]
name = "braid-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
braid-model = { path = "../braid-model", version = "0.3.0" }
braid-ports = { path = "../braid-ports", version = "0.3.0" }

[lints]
workspace = true
