[package]
name = "braid-hooks"
description = "Pre/post-execution hook system for the braid agent platform"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
braid-model = { workspace = true }
braid-ports = { workspace = true }

[lints]
workspace = true
