[package]
name = "braid-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
braid-model = { path = "../braid-model" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "io-std", "io-util"] }

[lints]
workspace = true
