[package]
name = "braid-mcp"
description = "MCP (Model Context Protocol) stdio server for braid"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
braid-model = { path = "../braid-model", version = "0.3.0" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "io-std", "io-util"] }

[lints]
workspace = true
