[package]
name = "braid-observe"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
test-support = []

[dependencies]
anyhow.workspace = true
braid-model = { path = "../braid-model" }
braid-ports = { path = "../braid-ports" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
braid-redact = { path = "../braid-redact" }
tempfile = "3"

[lints]
workspace = true
