[package]
name = "braid-observe"
description = "Session observability, storage, and replay for braid"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
test-support = []

[dependencies]
anyhow.workspace = true
braid-model = { path = "../braid-model", version = "0.3.0" }
braid-ports = { path = "../braid-ports", version = "0.3.0" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
braid-redact = { path = "../braid-redact", version = "0.3.0" }
tempfile = "3"

[lints]
workspace = true
