[package]
name = "braid-observe"
description = "Session observability, storage, and replay for braid"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
test-support = []

[dependencies]
anyhow.workspace = true
braid-model = { workspace = true }
braid-ports = { workspace = true }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
braid-redact = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
