[package]
name = "braid-ports"
description = "Port traits for the braid agent platform (Provider, ToolExecutor, EventSink, ComponentRegistry)"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
braid-model = { path = "../braid-model", version = "0.3.0" }

[lints]
workspace = true
