[package]
name = "braid-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
test-support = []

[dependencies]
anyhow.workspace = true
braid-model = { path = "../braid-model" }
braid-ports = { path = "../braid-ports" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json.workspace = true
tracing.workspace = true
openssl.workspace = true

[package.metadata.cargo-machete]
ignored = ["openssl"]

[lints]
workspace = true
