[package]
name = "braid-providers"
description = "LLM provider adapters for the braid agent platform (OpenAI, Ollama)"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
test-support = []

[dependencies]
anyhow.workspace = true
braid-model = { path = "../braid-model", version = "0.3.0" }
braid-ports = { path = "../braid-ports", version = "0.3.0" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json.workspace = true
tracing.workspace = true
openssl.workspace = true

[package.metadata.cargo-machete]
ignored = ["openssl"]

[lints]
workspace = true
