[package]
name = "braid-providers"
description = "LLM provider adapters for the braid agent platform (OpenAI, Ollama)"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
test-support = []

[dependencies]
anyhow.workspace = true
braid-model = { workspace = true }
braid-ports = { workspace = true }
openssl.workspace = true
reqwest = { workspace = true }
serde_json.workspace = true
tracing.workspace = true

[package.metadata.cargo-machete]
ignored = ["openssl"]

[lints]
workspace = true
