[package]
name = "braid-redact"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
braid-model = { path = "../braid-model", version = "0.3.0" }
braid-ports = { path = "../braid-ports", version = "0.3.0" }
regex.workspace = true
serde_json.workspace = true

[lints]
workspace = true
