[package]
name = "braid-tui"
description = "Terminal UI session inspector for braid"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "braid-tui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
braid-model = { path = "../braid-model", version = "0.3.0" }
braid-observe = { path = "../braid-observe", version = "0.3.0" }
crossterm = "0.28"
ratatui = "0.29"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
