[package]
name = "braid-tui"
description = "Terminal UI session inspector for braid"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "braid-tui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
braid-model = { workspace = true }
braid-observe = { workspace = true }
crossterm = "0.28"
ratatui = "0.29"
serde_json.workspace = true

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
